--- a/individual.html
+++ b/individual.html
@@ -75,7 +75,8 @@
                                     </div>
                                 </div>
                                 <div class="row pt-4">
-                                    <div class="col-lg-12">
+                                    <div class="col-lg-2"></div>
+                                    <div class="col-lg-8">
                                         <!-- Begin Mailchimp Signup Form -->
                                         <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
                                         <style type="text/css">
@@ -139,7 +140,7 @@
                             <div class="container">
                                 <div class="col-lg-12">
                                     <!-- Calendly inline widget begin -->
-                                    <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/individual-appointment" style="min-width:320px;height:630px;"></div>
+                                    <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/individual-appointment" style="min-width:320px;height:1000px;"></div>
                                     <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
                                     <!-- Calendly inline widget end -->
                                 </div>
