--- a/individual.html
+++ b/individual.html
@@ -137,14 +137,12 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="container">
-                                <div class="col-lg-12">
-                                    <!-- Calendly inline widget begin -->
-                                    <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/individual-appointment" style="min-width:320px;height:1000px;"></div>
-                                    <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-                                    <!-- Calendly inline widget end -->
-                                </div>
-                            </div>
+                        </div>
+                        <div class="container align-items-center">
+                            <!-- Calendly inline widget begin -->
+                            <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/individual-appointment" style="min-width:320px;height:1000px;"></div>
+                            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
+                            <!-- Calendly inline widget end -->
                         </div>
                     </header>
                 </main>
