--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,7 @@
                                     </div>
                                 </div>
                                 <div class="row align-items-center mb-10">
-                                    <div class="col-lg-12 text-center">
-                                        <div class="section-preheading">Email Us</div>
-                                        <a href="mailto:contact@wing.health">contact@wing.health</a>
-                                    </div>
+                                    <div class="col-lg-12 text-center"><a href="mailto:contact@wing.health">contact@wing.health</a></div>
                                     <div class="col-lg-3"></div>
                                 </div>
                             </div>
@@ -53,7 +50,7 @@
                         <div class="container">
                             <div class="row justify-content-center">
                                 <div class="col-xl-8 col-lg-10 text-center">
-                                    <p class="page-header-text mb-5">Connect with us to learn more about telehealth in your community</p>
+                                    <h1 class="page-header-title">Sign up to our newsletter</h1>
                                     <!-- Begin Mailchimp Signup Form -->
                                     <div id="mc_embed_signup">
                                         <form class="page-header-signup mb-2 mb-md-0" action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
