--- a/individual.html
+++ b/individual.html
@@ -37,7 +37,7 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-7">
-                                        <h1 class="page-header-title">Local care for individuals</h1>
+                                        <h1 class="page-header-title">Local virtual care for individuals</h1>
                                         <p class="page-header-text mb-5">Wing Health is telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat</p>
                                     </div>
                                     <div class="col-lg-5"><img class="img-fluid" src="assets/img/svgs/mask-man.svg" /></div>
@@ -47,8 +47,8 @@
                                         <div class="card h-100">
                                             <div class="card-body p-5">
                                                 <div class="text-center">
-                                                    <div class="h1">Sign up</div>
-                                                    <div class="p text-dark">Tell us more about yourself</div>
+                                                    <div class="h1">Meet local health care professionals</div>
+                                                    <div class="p text-dark">Wing Health connects individuals to local community providers offering virtual services</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -57,8 +57,8 @@
                                         <div class="card h-100">
                                             <div class="card-body p-5">
                                                 <div class="text-center">
-                                                    <div class="h1">Enter availability</div>
-                                                    <div class="p text-dark">We will reach out and connect you with a local provider</div>
+                                                    <div class="h1">Set up with us</div>
+                                                    <div class="p text-dark">Our telehealth experts help you set up all the tools you need to recieve virtual care and are available for any questions</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -67,14 +67,21 @@
                                         <div class="card h-100">
                                             <div class="card-body p-5">
                                                 <div class="text-center">
-                                                    <div class="h1">Pay with Medicare and Medicaid</div>
-                                                    <div class="p text-dark">Care at home is now covered</div>
+                                                    <div class="h1">Pay with Medicare, Medicaid and private insurance</div>
+                                                    <div class="p text-dark">New regulation expands coverage</div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row pt-4">
+                            </div>
+                        </div>
+                        <div class="page-header-content pt-4">
+                            <div class="container pt-4">
+                                <div class="row align-items-center text-center pt-4">
+                                    <div class="col-lg-12"><h1>Start connecting with local health care professionals</h1></div>
+                                </div>
+                                <div class="row align-items-center">
                                     <div class="col-lg-2"></div>
                                     <div class="col-lg-8">
                                         <!-- Begin Mailchimp Signup Form -->
@@ -89,21 +96,11 @@
                                         <div id="mc_embed_signup">
                                             <form action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                                 <div id="mc_embed_signup_scroll">
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-FNAME">First Name <span class="asterisk">*</span> </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" />
-                                                    </div>
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-LNAME">Last Name <span class="asterisk">*</span> </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" />
-                                                    </div>
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-MMERGE5">What type of care are you seeking? <span class="asterisk">*</span> </label> <input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5" />
-                                                    </div>
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" />
-                                                    </div>
-                                                    <div class="mc-field-group size1of2">
-                                                        <label for="mce-MMERGE6">Phone Number <span class="asterisk">*</span> </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6" />
-                                                    </div>
+                                                    <div class="mc-field-group"><label for="mce-FNAME">First Name </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" /></div>
+                                                    <div class="mc-field-group"><label for="mce-LNAME">Last Name </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" /></div>
+                                                    <div class="mc-field-group"><label for="mce-MMERGE5">What type of care are you seeking? </label> <input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5" /></div>
+                                                    <div class="mc-field-group"><label for="mce-EMAIL">Email Address </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" /></div>
+                                                    <div class="mc-field-group size1of2"><label for="mce-MMERGE6">Phone Number </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6" /></div>
                                                     <div id="mce-responses" class="clear">
                                                         <div class="response" id="mce-error-response" style="display:none"></div>
                                                         <div class="response" id="mce-success-response" style="display:none"></div>
@@ -136,12 +133,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="container align-items-center">
-                            <!-- Calendly inline widget begin -->
-                            <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/individual-appointment" style="min-width:320px;height:1000px;"></div>
-                            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-                            <!-- Calendly inline widget end -->
                         </div>
                     </header>
                 </main>
