--- a/provider.html
+++ b/provider.html
@@ -37,8 +37,8 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-7">
-                                        <h1 class="page-header-title">Opportunity is local and virtual for providers</h1>
-                                        <p class="page-header-text md-5">Set up visits, bill Medicare and Medicaid, and connect with individuals in your community</p>
+                                        <h1 class="page-header-title">Local virtual opportunity for providers</h1>
+                                        <p class="page-header-text md-5">Schedule visits, set your own hours and bill for virtual care. All from your own device</p>
                                     </div>
                                     <div class="col-lg-5"><img class="img-fluid mb-5" src="assets/img/svgs/doctor-woman.svg" height="50px" /></div>
                                 </div>
@@ -47,8 +47,8 @@
                                         <div class="card h-100">
                                             <div class="card-body p-5">
                                                 <div class="text-center">
-                                                    <div class="h1">Sign up</div>
-                                                    <div class="p">Wing Health notifies you of people in your community looking for care</div>
+                                                    <div class="h1">Sign up, meet patients</div>
+                                                    <div class="p">Connect with individuals in your community looking for your expertise</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -57,8 +57,8 @@
                                         <div class="card h-100">
                                             <div class="card-body p-5">
                                                 <div class="text-center">
-                                                    <div class="h1">We onboard you to to telehealth</div>
-                                                    <div class="p">Attend one of our information sessions</div>
+                                                    <div class="h1">Onboard to to telehealth</div>
+                                                    <div class="p">Attend one of our information sessions and ask any questions</div>
                                                 </div>
                                             </div>
                                         </div>
@@ -67,12 +67,19 @@
                                         <div class="card h-100">
                                             <div class="card-body p-5">
                                                 <div class="text-center">
-                                                    <div class="h1">Bill Medicare and Medicaid</div>
-                                                    <div class="p">FQHCs can now bill these for telehealth services</div>
+                                                    <div class="h1">Bill Medicare, Medicaid and private insurance</div>
+                                                    <div class="p">New regulation expands coverage</div>
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="page-header-content pt-4">
+                            <div class="container pt-4">
+                                <div class="row align-items-center text-center pt-4">
+                                    <div class="col-lg-12"><h1>Start providing virtual care in your community</h1></div>
                                 </div>
                                 <div class="row align-items-center pt-4">
                                     <div class="col-lg-2"></div>
@@ -89,22 +96,11 @@
                                         <div id="mc_embed_signup">
                                             <form action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                                 <div id="mc_embed_signup_scroll">
-                                                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-FNAME">First Name <span class="asterisk">*</span> </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" />
-                                                    </div>
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-LNAME">Last Name <span class="asterisk">*</span> </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" />
-                                                    </div>
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-MMERGE3">Specialty <span class="asterisk">*</span> </label> <input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3" />
-                                                    </div>
-                                                    <div class="mc-field-group">
-                                                        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" />
-                                                    </div>
-                                                    <div class="mc-field-group size1of2">
-                                                        <label for="mce-MMERGE6">Phone Number <span class="asterisk">*</span> </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6" />
-                                                    </div>
+                                                    <div class="mc-field-group"><label for="mce-FNAME">First Name </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" /></div>
+                                                    <div class="mc-field-group"><label for="mce-LNAME">Last Name </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" /></div>
+                                                    <div class="mc-field-group"><label for="mce-MMERGE3">Specialty </label> <input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3" /></div>
+                                                    <div class="mc-field-group"><label for="mce-EMAIL">Email Address </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" /></div>
+                                                    <div class="mc-field-group size1of2"><label for="mce-MMERGE6">Phone Number </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6" /></div>
                                                     <div id="mce-responses" class="clear">
                                                         <div class="response" id="mce-error-response" style="display:none"></div>
                                                         <div class="response" id="mce-success-response" style="display:none"></div>
@@ -137,12 +133,6 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="container align-items-center">
-                            <!-- Calendly inline widget begin -->
-                            <div class="calendly-inline-widget" data-url="https://calendly.com/wing-health/we-d-like-to-connect-clone" style="min-width:220px;height:750px;"></div>
-                            <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js"></script>
-                            <!-- Calendly inline widget end -->
                         </div>
                     </header>
                 </main>
