--- a/individual.html
+++ b/individual.html
@@ -81,7 +81,7 @@
                                 <div class="row align-items-center text-center pt-4">
                                     <div class="col-lg-12"><h1>Start connecting with local health care professionals</h1></div>
                                 </div>
-                                <div class="row align-items-center">
+                                <div class="row align-items-center pt-4">
                                     <div class="col-lg-2"></div>
                                     <div class="col-lg-8">
                                         <!-- Begin Mailchimp Signup Form -->
@@ -107,7 +107,7 @@
                                                     </div>
                                                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value="" /></div>
-                                                    <div class="clear"><input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="button" /></div>
+                                                    <div class="clear"><input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="btn-teal btn-marketing rounded-pill" /></div>
                                                 </div>
                                             </form>
                                         </div>
