--- a/contact.html
+++ b/contact.html
@@ -38,21 +38,17 @@
                                 <div class="row justify-content-center">
                                     <div class="col-lg-8 text-center">
                                         <h1 class="page-header-title">Get in touch with Wing Health</h1>
-                                        <p class="lead mb-5">We will get back to you as soon as possible</p>
+                                        <a class="pt-4" href="mailto:contact@wing.health">contact@wing.health</a>
                                     </div>
-                                </div>
-                                <div class="row align-items-center mb-10">
-                                    <div class="col-lg-12 text-center"><a href="mailto:contact@wing.health">contact@wing.health</a></div>
-                                    <div class="col-lg-3"></div>
                                 </div>
                             </div>
                         </div>
-                        <div class="container">
-                            <div class="row justify-content-center">
-                                <div class="col-xl-8 col-lg-10 text-center">
+                        <div class="container pt-4">
+                            <div class="row justify-content-center pt-4">
+                                <div class="col-xl-8 col-lg-10 text-center pt-4">
                                     <h1 class="page-header-title">Sign up to our newsletter</h1>
                                     <!-- Begin Mailchimp Signup Form -->
-                                    <div id="mc_embed_signup">
+                                    <div id="mc_embed_signup" class="pt-4">
                                         <form class="page-header-signup mb-2 mb-md-0" action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
                                             <div class="form-row justify-content-center">
                                                 <div class="col-lg-6 col-md-8">
