--- a/individual.html
+++ b/individual.html
@@ -37,7 +37,7 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-7">
-                                        <h1 class="page-header-title">Local virtual care for individuals</h1>
+                                        <h1 class="page-header-title">Local care for individuals</h1>
                                         <p class="page-header-text mb-5">Wing Health is telehealth delivered one-on-one, privately and confidentially, with a nearby professional via messaging, phone or video chat</p>
                                     </div>
                                     <div class="col-lg-5"><img class="img-fluid" src="assets/img/svgs/mask-man.svg" /></div>
@@ -107,7 +107,7 @@
                                                     </div>
                                                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value="" /></div>
-                                                    <div class="clear"><input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="btn-teal btn-marketing rounded-pill" /></div>
+                                                    <div class="clear"><input type="submit" value="Sign up" name="subscribe" id="mc-embedded-subscribe" class="btn btn-teal btn-marketing rounded-pill" /></div>
                                                 </div>
                                             </form>
                                         </div>
