--- a/provider.html
+++ b/provider.html
@@ -37,7 +37,7 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-7">
-                                        <h1 class="page-header-title">Local virtual opportunity for providers</h1>
+                                        <h1 class="page-header-title">Local opportunity for providers</h1>
                                         <p class="page-header-text md-5">Schedule visits, set your own hours and bill for virtual care. All from your own device</p>
                                     </div>
                                     <div class="col-lg-5"><img class="img-fluid mb-5" src="assets/img/svgs/doctor-woman.svg" height="50px" /></div>
