--- a/provider.html
+++ b/provider.html
@@ -57,7 +57,7 @@
                                         <div class="card h-100">
                                             <div class="card-body p-5">
                                                 <div class="text-center">
-                                                    <div class="h1">Onboard to to telehealth</div>
+                                                    <div class="h1">Onboard to telehealth</div>
                                                     <div class="p">Attend one of our information sessions and ask any questions</div>
                                                 </div>
                                             </div>
