--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
                         <div class="row">
                             <div class="col-lg-3">
                                 <div class="footer-brand">Wing Health</div>
-                                <div class="mb-3">Hyperlocalized telehealth</div>
+                                <div class="mb-3">Hyperlocal telehealth</div>
                                 <div class="mb-3"><a href="contact.html">Contact us</a></div>
                             </div>
                         </div>
