--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-7">
-                                        <h1 class="page-header-title">Hyperlocalized telehealth</h1>
+                                        <h1 class="page-header-title">Hyperlocal telehealth</h1>
                                         <p class="page-header-text mb-5">Wing Health enables individuals to connect with telehealth care professionals in their neighborhoods, towns and cities</p>
                                     </div>
                                     <div class="col-lg-5"><img class="img-fluid" src="assets/img/svgs/drawkit-list-app-colour.svg" /></div>
@@ -109,7 +109,7 @@
                         <div class="row">
                             <div class="col-lg-3">
                                 <div class="footer-brand">Wing Health</div>
-                                <div class="mb-3">Hyperlocalized telehealth</div>
+                                <div class="mb-3">Hyperlocal telehealth</div>
                                 <div class="mb-3"><a href="contact.html">Contact us</a></div>
                             </div>
                         </div>
