--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto mr-lg-">
+                                    <li class="nav-item"><a class="nav-link" href="find-a-clinic.html">Find a clinic</a></li>
                                     <li class="nav-item"><a class="nav-link" href="individual.html">For individuals</a></li>
                                     <li class="nav-item"><a class="nav-link" href="provider.html">For providers</a></li>
                                 </ul>
@@ -38,7 +39,8 @@
                                 <div class="row align-items-center">
                                     <div class="col-lg-7">
                                         <h1 class="page-header-title">Hyperlocal telehealth</h1>
-                                        <p class="page-header-text mb-5">Wing Health enables individuals to connect with telehealth care professionals in their neighborhoods, towns and cities</p>
+                                        <p class="page-header-text mb-5">Wing Health connects individuals to nearby health care professionals</p>
+                                        <a class="btn btn-teal btn-marketing rounded-pill" href="find-a-clinic.html">Find a clinic</a>
                                     </div>
                                     <div class="col-lg-5"><img class="img-fluid" src="assets/img/svgs/drawkit-list-app-colour.svg" /></div>
                                 </div>
@@ -64,38 +66,6 @@
                                 <div class="col-lg-7">
                                     <h1 class="page-header-title">For providers, opportunity is local and virtual</h1>
                                     <p class="page-header-text mb-5">Wing Health makes it easy for providers to connect with new and existing individuals in their communities</p>
-                                </div>
-                            </div>
-                            <div class="row pt-4">
-                                <div class="col-lg-4 mb-5 mb-lg-0">
-                                    <div class="card h-100">
-                                        <div class="card-body p-5">
-                                            <div class="text-center">
-                                                <div class="h1">Easy visits</div>
-                                                <div class="p">Wing Health schedules visits and facilitates billing</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 mb-5 mb-lg-0">
-                                    <div class="card h-100">
-                                        <div class="card-body p-5">
-                                            <div class="text-center">
-                                                <div class="h1">Bill Medicare, Medicaid and private insurers</div>
-                                                <div class="p">New rules have expanded what can be reimbursed</div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 mb-5 mb-lg-0">
-                                    <div class="card h-100">
-                                        <div class="card-body p-5">
-                                            <div class="text-center">
-                                                <div class="h1">Community first</div>
-                                                <div class="p">We are comitted to providing a high quality experience for FQHCs and the communities they serve</div>
-                                            </div>
-                                        </div>
-                                    </div>
                                 </div>
                             </div>
                             <div class="mt-5 text-center"><a class="btn btn-teal btn-marketing rounded-pill" href="provider.html">For providers</a></div>
