--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
                 <main>
                     <nav class="navbar navbar-marketing navbar-expand-lg bg-white navbar-light">
                         <div class="container">
-                            <a class="navbar-brand text-dark" href="/">Wing Health</a
+                            <a href="/">
+                                <img src="assets/img/logo2.png" alt="HTML tutorial" style="height:42px;border:0;" /> </a
                             ><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu">
                                     <line x1="3" y1="12" x2="21" y2="12"></line>
@@ -39,14 +40,15 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-8">
-                                        <h1 class="page-header-title">About us</h1>
-                                        <p class="page-header-text md-5 pt-4">Wing Health was founded at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a>. 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Our pitch was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world.</p>
-                                        <h1 class="page-header-title pt-4">Team</h1>
-                                        <p class="page-header-text md-5 pt-4">Stephen Grinich. Experience developing impactful telemedicine solutions at scale at 98point6 and Amwell (previously Avizia, Carena). Health care and digital health innovation at UCSF Innovation Ventures. Computer science, mathematics and health economics at Carleton College.</p>
-                                        <p class="page-header-text md-5">Jinsy Jacob, MD, MBA. Medical Director of Innovation at Nevada Health Centers. Experience with launching and growing a successful telemedicine program at Nevada Health Centers.</p>
-                                        <p class="page-header-text md-5">Nikhil Yedulla, MD Candidate. Pursuing medical degree at Wayne State University School of Medicine Experience with telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Biological science and Economics at Wayne State University.</p>
-                                        <h1 class="page-header-title pt-4">Mission</h1>
+                                        <h1 class="page-header-title pt-4">About us</h1>
+                                        <h1 class="pt-4">Mission</h1>
                                         <p class="page-header-text md-5 pt-4">We believe health care is delivered best when it reflects the unique and diverse needs of the communities served, and that individuals recieve the best care from professionals in their neighborhoods, towns and cities. Our mission at Wing Health is to connect patients with local and trusted providers offering telehealth.</p>
+                                        <h1 class="pt-4">Team</h1>
+                                        <p class="page-header-text md-5 pt-4">Stephen Grinich brings career experience building telemedicine solutions and digital health products. Stephen grew up in a small town in the Willamette Valley of Oregon, the type of community now adopting telehealth for the first time. Stephen studied health care and digital health innovation at UCSF Innovation Ventures and computer science, mathematics and health economics at Carleton College.</p>
+                                        <p class="page-header-text md-5">Jinsy Jacob is the Medical Director of Innovation at Nevada Health Centers. Jinsy brings her experience launching and growing a successful telemedicine program at Nevada Health Centers, where she focuses on underserved, urban communities.</p>
+                                        <p class="page-header-text md-5">Nikhil Yedulla is pursuing a medical degree at Wayne State University School of Medicine. Nikhil brings his experience in telehealth research at Henry Ford Health System and medtech commercialization as CMO of Surgicure Technologies. Nikhil studied biological science and economics at Wayne State University.</p>
+                                        <h1 class="pt-4">Our story</h1>
+                                        <p class="page-header-text md-5 pt-4">Wing Health was founded at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a>. 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Our pitch was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world.</p>
                                     </div>
                                 </div>
                             </div>
