--- a/find-a-clinic.html
+++ b/find-a-clinic.html
@@ -43,8 +43,65 @@
                             <div class="container">
                                 <div class="row align-items-center text-center pt-4">
                                     <div class="col-lg-12">
-                                        <h1 class="page-header-title">Choose a clinic</h1>
-                                        <p class="page-header-text mb-5">San Francisco centers now offering telehealth services</p>
+                                        <h1 class="page-header-title">We guide you to local virtual care</h1>
+                                        <p class="text-dark pt-4">A Wing Health representitive will reach out and connect you to a health professional. Find local primary care, mental health counseling, physical therapy and more that is suited to your unique needs.</p>
+                                    </div>
+                                </div>
+                                <div class="row align-items-center pt-4">
+                                    <div class="col-lg-2"></div>
+                                    <div class="col-lg-8">
+                                        <!-- Begin Mailchimp Signup Form -->
+                                        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css" />
+                                        <style type="text/css">
+                                            #mc_embed_signup {
+                                                background: #fff;
+                                                clear: left;
+                                                font: 14px Helvetica, Arial, sans-serif;
+                                            } /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block. We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+                                        </style>
+                                        <div id="mc_embed_signup">
+                                            <form action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                                                <div id="mc_embed_signup_scroll">
+                                                    <div class="mc-field-group"><label for="mce-FNAME">First Name </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" /></div>
+                                                    <div class="mc-field-group"><label for="mce-LNAME">Last Name </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" /></div>
+                                                    <div class="mc-field-group"><label for="mce-MMERGE5">What type of care are you seeking? </label> <input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5" /></div>
+                                                    <div class="mc-field-group"><label for="mce-EMAIL">Email Address </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" /></div>
+                                                    <div class="mc-field-group size1of2"><label for="mce-MMERGE6">Phone Number </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6" /></div>
+                                                    <div id="mce-responses" class="clear">
+                                                        <div class="response" id="mce-error-response" style="display:none"></div>
+                                                        <div class="response" id="mce-success-response" style="display:none"></div>
+                                                    </div>
+                                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value="" /></div>
+                                                    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-teal btn-marketing rounded-pill" /></div>
+                                                </div>
+                                            </form>
+                                        </div>
+                                        <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+                                        <script type="text/javascript">
+                                            (function($) {
+                                                window.fnames = new Array();
+                                                window.ftypes = new Array();
+                                                fnames[1] = 'FNAME';
+                                                ftypes[1] = 'text';
+                                                fnames[2] = 'LNAME';
+                                                ftypes[2] = 'text';
+                                                fnames[5] = 'MMERGE5';
+                                                ftypes[5] = 'text';
+                                                fnames[0] = 'EMAIL';
+                                                ftypes[0] = 'email';
+                                                fnames[6] = 'MMERGE6';
+                                                ftypes[6] = 'phone';
+                                            })(jQuery);
+                                            var $mcj = jQuery.noConflict(true);
+                                        </script>
+                                        <!--End mc_embed_signup-->
+                                    </div>
+                                </div>
+                                <div class="row align-items-center text-center pt-4">
+                                    <div class="col-lg-12">
+                                        <h1 class="page-header-title">Community health centers</h1>
+                                        <p>San Francisco clinics now offering virtual care</p>
                                     </div>
                                 </div>
                                 <div class="row pt-4 text-center pt-4">
