--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <div class="container">
                                 <div class="row align-items-center">
                                     <div class="col-lg-7">
-                                        <h1 class="page-header-title">Virtual care with a nearby health professional</h1>
+                                        <h1 class="page-header-title">SMS text onboarding to virtual care</h1>
                                         <p class="page-header-text mb-5">Wing Health is your personal guide to accessing local telehealth offerings</p>
                                         <a class="btn btn-teal btn-marketing rounded-pill" href="find-a-clinic.html">Book a visit</a>
                                     </div>
@@ -84,7 +84,7 @@
                         <div class="row">
                             <div class="col-lg-3">
                                 <div class="footer-brand">Wing Health</div>
-                                <div class="mb-3">Virtual care with a nearby health professional</div>
+                                <div class="mb-3">SMS text onboarding to virtual care</div>
                                 <div class="mb-3"><a href="contact.html">Contact us</a></div>
                                 <div class="icon-list-social mb-5">
                                     <a class="icon-list-social-link" href="https://www.linkedin.com/company/wing-health"><i class="fab fa-linkedin"></i></a><a class="icon-list-social-link" href="https://www.facebook.com/winghealthapp"><i class="fab fa-facebook"></i></a>
