--- a/about.html
+++ b/about.html
@@ -29,12 +29,11 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto mr-lg-">
-                                    <li class="nav-item"><a class="nav-link" href="individual.html">For individuals</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="provider.html">For providers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                                 </ul>
-                                <a class="btn btn-teal rounded-pill px-4 ml-lg-4" href="find-a-clinic.html">Book a visit</a>
+                                <a class="btn btn-teal rounded-pill px-4 ml-lg-4" href="schedule-demo.html">Schedule demo</a>
                             </div>
                         </div>
                     </nav>
@@ -59,6 +58,13 @@
                                         <h1 class="pt-4">Our Story</h1>
                                         <p class="page-header-text md-5 pt-4">Stephen, Jinsy and Nikhil met at the <a href="https://www.youtube.com/watch?v=S_VjyVsAQhY&feature=emb_title"> MIT COVID-19 Challenge - Beat The Pandemic</a> and coalesced around the idea of hyperlocal telehealth delivery within their local communities. At this event, 1500 participants and 250 mentors from around the world came together to help tackle some of the most pressing issues arising from the COVID-19 pandemic. Wing Health was selected as a top team for the track focusing on new ways to deliver care in a COVID-19 world.</p>
                                     </div>
+                                </div>
+                            </div>
+                            <div class="container">
+                                <div class="row align-items-center">
+                                    <div class="col-lg-4"><img class="img-fluid mb-5" src="assets/img/ucsf-hackathon.jpeg" /></div>
+                                    <div class="col-lg-4"><img class="img-fluid mb-5" src="assets/img/mit-covid-challenge.png" /></div>
+                                    <div class="col-lg-4"><img class="img-fluid mb-5" src="assets/img/sling-health.png" /></div>
                                 </div>
                             </div>
                         </div>
