--- a/find-a-clinic.html
+++ b/find-a-clinic.html
@@ -29,12 +29,11 @@
                             </button>
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto mr-lg-">
-                                    <li class="nav-item"><a class="nav-link" href="individual.html">For individuals</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="provider.html">For providers</a></li>
+                                    <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                                 </ul>
-                                <a class="btn btn-teal rounded-pill px-4 ml-lg-4" href="find-a-clinic.html">Book a visit</a>
+                                <a class="btn btn-teal rounded-pill px-4 ml-lg-4" href="schedule-demo.html">Schedule demo</a>
                             </div>
                         </div>
                     </nav>
