--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -30,7 +30,6 @@
                             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                                 <ul class="navbar-nav ml-auto mr-lg-">
                                     <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
-                                    <li class="nav-item"><a class="nav-link" href="provider.html">For providers</a></li>
                                     <li class="nav-item"><a class="nav-link" href="about.html">About us</a></li>
                                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                                 </ul>
@@ -43,8 +42,8 @@
                             <div class="container">
                                 <div class="row align-items-center text-center pt-4">
                                     <div class="col-lg-12">
-                                        <h1 class="page-header-title">We guide you to local virtual care</h1>
-                                        <p class="text-dark pt-4">A Wing Health representitive will reach out and connect you to a health professional. Find local primary care, mental health counseling, physical therapy and more that is suited to your unique needs.</p>
+                                        <h1 class="page-header-title">Learn about our SMS text assistant</h1>
+                                        <p class="text-dark pt-4">A Wing Health representitive will reach out to see how we can bring our automated assitant to your health center and patients</p>
                                     </div>
                                 </div>
                                 <div class="row align-items-center pt-4">
@@ -62,18 +61,29 @@
                                         <div id="mc_embed_signup">
                                             <form action="https://health.us19.list-manage.com/subscribe/post?u=60f25dc9e60410744bfbf2f9c&amp;id=170a42c8da" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                                                 <div id="mc_embed_signup_scroll">
-                                                    <div class="mc-field-group"><label for="mce-FNAME">First Name </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" /></div>
-                                                    <div class="mc-field-group"><label for="mce-LNAME">Last Name </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" /></div>
-                                                    <div class="mc-field-group"><label for="mce-MMERGE5">What type of care are you seeking? </label> <input type="text" value="" name="MMERGE5" class="required" id="mce-MMERGE5" /></div>
-                                                    <div class="mc-field-group"><label for="mce-EMAIL">Email Address </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" /></div>
-                                                    <div class="mc-field-group size1of2"><label for="mce-MMERGE6">Phone Number </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6" /></div>
+                                                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                                                    <div class="mc-field-group">
+                                                        <label for="mce-FNAME">First Name <span class="asterisk">*</span> </label> <input type="text" value="" name="FNAME" class="required" id="mce-FNAME" />
+                                                    </div>
+                                                    <div class="mc-field-group">
+                                                        <label for="mce-LNAME">Last Name <span class="asterisk">*</span> </label> <input type="text" value="" name="LNAME" class="required" id="mce-LNAME" />
+                                                    </div>
+                                                    <div class="mc-field-group">
+                                                        <label for="mce-EMAIL">Email Address <span class="asterisk">*</span> </label> <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" />
+                                                    </div>
+                                                    <div class="mc-field-group size1of2">
+                                                        <label for="mce-MMERGE6">Phone Number <span class="asterisk">*</span> </label> <input type="text" name="MMERGE6" class="required" value="" id="mce-MMERGE6" />
+                                                    </div>
+                                                    <div class="mc-field-group">
+                                                        <label for="mce-MMERGE3">What is your health center? <span class="asterisk">*</span> </label> <input type="text" value="" name="MMERGE3" class="required" id="mce-MMERGE3" />
+                                                    </div>
                                                     <div id="mce-responses" class="clear">
                                                         <div class="response" id="mce-error-response" style="display:none"></div>
                                                         <div class="response" id="mce-success-response" style="display:none"></div>
                                                     </div>
                                                     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                                                     <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_60f25dc9e60410744bfbf2f9c_170a42c8da" tabindex="-1" value="" /></div>
-                                                    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-teal btn-marketing rounded-pill" /></div>
+                                                    <div class="clear"><input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="button" /></div>
                                                 </div>
                                             </form>
                                         </div>
@@ -86,12 +96,12 @@
                                                 ftypes[1] = 'text';
                                                 fnames[2] = 'LNAME';
                                                 ftypes[2] = 'text';
-                                                fnames[5] = 'MMERGE5';
-                                                ftypes[5] = 'text';
                                                 fnames[0] = 'EMAIL';
                                                 ftypes[0] = 'email';
                                                 fnames[6] = 'MMERGE6';
                                                 ftypes[6] = 'phone';
+                                                fnames[3] = 'MMERGE3';
+                                                ftypes[3] = 'text';
                                             })(jQuery);
                                             var $mcj = jQuery.noConflict(true);
                                         </script>
